fix translate3d issue on iOS

--- a/source/stylesheets/_base.css.sass
+++ b/source/stylesheets/_base.css.sass
@@ -35,7 +35,7 @@ body
   margin: 0
 
   &[s-slide-out]
-    transform: translateX(-300px)
+    +translate3d(-300px, 0, 0)
 
 h1, h2, h3, h4, h5, h6
   display: inline-block
